Toggle between no grouping and group by groups when in kpeople mode

Also this fixes expand when filtering

REVIEW: 112683
BUG: 324306
BUG: 324305